# Vending-Machine

./: CMakeLists.txt  local_history.patch  main.cpp  test.txt
Domain/: Banknote.cpp  Banknote.h  BanknoteValidator.h  Comparari.h  Money.cpp  Money.h  MyException.h  Product.cpp  Product.h  ProductValidator.h
Repository/: IRepository.cpp  IRepository.h  RepoFileProduct.cpp  RepoFileProduct.h  RepoProduct.cpp  RepoProduct.h  Repository.h  RepositoryInFile.h
Service/: BanknoteService.cpp  BanknoteService.h  ProductService.cpp  ProductService.h
Tests/: Tests.cpp  Tests.h
UI/: UI.cpp  UI.h
